--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,27 @@
       "preLaunchTask": "runMake", // THIS IS IMPORTANT
     },
     {
+      "name": "(lldb) Launch with args", // Change name
+      "type": "lldb",
+      "request": "launch",
+      "program": "${workspaceFolder}/bin/main", // THIS IS IMPORTANT
+      "args": ["64.59.225.81", "/chadd/cs360f21/LabHttp.html"], // add comma separated list of args here.
+      // "stopAtEntry":  true, // THIS IS IMPORTANT // does not work with lldb
+      "cwd": "${workspaceFolder}",
+      "environment": [],
+      "externalConsole": false,
+      "MIMode": "lldb",
+      "miDebuggerPath": "/usr/bin/lldb",
+      "setupCommands": [
+          {
+              "description": "Enable pretty-printing for gdb",
+              "text": "-enable-pretty-printing",
+              "ignoreFailures": true
+          }
+      ],
+      "preLaunchTask": "runMake", // THIS IS IMPORTANT
+    },
+    {
       "name": "(gdb) Launch",
       "type": "cppdbg",
       "request": "launch",
