update with tasks and devcontainer

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,26 @@
     "problemMatcher": [
         "$gcc"
       ]
-   } 
+   },
+   {
+    "label": "printToPDF",
+    "type": "shell",
+    "command": "make printAll",
+    "group": {
+        "kind": "none"
+    },
+    "problemMatcher": []
+    }, 
+    {
+        "label": "valgrind",
+        "type": "shell",
+        "command": "make valgrind",
+        "group": {
+            "kind": "none"
+        },
+        "problemMatcher": []
+        }, 
+    
   ]
+  
 }
